--- a/API/API.csproj
+++ b/API/API.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <ProjectReference Include="../Application/Application.csproj" />
+    <ProjectReference Include="../Persistence/Persistence.csproj" />
+    <ProjectReference Include="../Domain/Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
