--- a/API/API.csproj
+++ b/API/API.csproj
@@ -18,5 +18,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  
+  <ItemGroup>
+    <Using Include="Domain" />
+    <Using Include="Persistence" />
+  </ItemGroup>
 
 </Project>
